@@ -489,10 +489,11 @@ class curses_game():
         elif command == 'reveal':
             if engine.game_status == 'pre-game':
                 self.message('Initializing field...   This may take a while.')
-            curses.reset_shell_mode()   # BUG #3 (See the file "BUGS".)
+                curses.reset_shell_mode()   # BUG #3 (See the file "BUGS".)
             engine.reveal(self.cursor)
-            curses.reset_prog_mode()    # BUG #3 (See the file "BUGS".)
-            self.window.redrawwin()     # BUG #3 (See the file "BUGS".)
+            if engine.game_status == 'pre-game':
+                curses.reset_prog_mode()    # BUG #3 (See the file "BUGS".)
+                self.window.redrawwin()     # BUG #3 (See the file "BUGS".)
         elif command in direction_keys:
             self.travel(engine.field, command)
         else:
@@ -1426,7 +1427,7 @@ if __name__ == '__main__':
             curses.endwin()
         except:
             pass
-        output(sys.stderr,'Security alert: ' + e.message + '\n')
+        output(sys.stderr,'Security alert: ' + str(e) + '\n')
         os._exit(1)
     except:
         # Get the traceback without fucking up the terminal.
