@@ -9,6 +9,10 @@
               unintentionally.
             - raise security_alert rather than Exception for the timeout alarm.
               (except Exception caught lots of other stuff.)
+        * anonymine.py (game_engine.input): Only use the BUG#3 workaround
+            when the field is being initialized.
+        * anonymine.py: Use str(game_engine.security_alert) rather than
+            game_engine.security_alert.message.
 
 2016-07-16      Oskar Skog      <oskar.skog.finland@gmail.com>
     0.2.16
